added google analytics

--- a/index.html
+++ b/index.html
@@ -164,11 +164,23 @@
     <div class="main-container" id="wir">
       <h2>Die Erfinder</h2>
       <p><span><a href="img/_c_l.png" rel="prettyPhoto[gallery]"><img src="img/c_l.png" width="300px"></a></span><span class="person">Christoph Lajendäcker - Architekt - <a href="mailto:christoph@lajendaecker.de">christoph@lajendaecker.de</a></span></p>
-      <p><span><a href="img/_j_k.png" rel="prettyPhoto[gallery]"><img src="img/j_k.png" width="300px"></a></span><span class="person">Jan Kus - Entwickler - <a href="mailto:jan.kus@mac.com">jan.kus@mac.com</a></span></p>
+      <p><span><a href="img/_j_k.png" rel="prettyPhoto[gallery]"><img src="img/oj_k.png" width="300px"></a></span><span class="person">Jan Kus - Entwickler - <a href="mailto:jan.kus@mac.com">jan.kus@mac.com</a></span></p>
     </div>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript">
 
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-37696326-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
   </body>
 </html>
