--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="main-container" id="wir">
       <h2>Die Erfinder</h2>
       <p><span><a href="img/_c_l.png" rel="prettyPhoto[gallery]"><img src="img/c_l.png" width="300px"></a></span><span class="person">Christoph Lajendäcker - Architekt - <a href="mailto:christoph@lajendaecker.de">christoph@lajendaecker.de</a></span></p>
-      <p><span><a href="img/_j_k.png" rel="prettyPhoto[gallery]"><img src="img/oj_k.png" width="300px"></a></span><span class="person">Jan Kus - Entwickler - <a href="mailto:jan.kus@mac.com">jan.kus@mac.com</a></span></p>
+      <p><span><a href="img/_j_k.png" rel="prettyPhoto[gallery]"><img src="img/j_k.png" width="300px"></a></span><span class="person">Jan Kus - Entwickler - <a href="mailto:jan.kus@mac.com">jan.kus@mac.com</a></span></p>
     </div>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
