--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
     <div id="splitter" class="clearfix"></div>
     <div class="main-container" id="wantacube">
       <h2>Mein Cube?</h2>
-      <p><a href="mailto:jan.kus@mac.com">Bei Fragen schreiben Sie uns doch einfach</a></p>
+      <p><a href="mailto:wantacube@cubesare.com">Bei Fragen schreiben Sie uns doch einfach eine E-Mail</a>, <a href="http://twitter.com/cubesare">folgen sie uns auf Twitter</a> oder <a href="http://facebook.com/cubesare">hinterlassen sie einen Eintrag auf unsere Facebook Pinnwand</a>.</p>
     </div>
     <div id="splitter" class="clearfix"></div>
     <div class="main-container" id="wir">
       <h2>Die Erfinder</h2>
-      <p><span><a href="img/_c_l.png" rel="prettyPhoto[gallery]"><img src="img/c_l.png" width="300px"></a></span><span class="person">Christoph Lajendäcker - Architekt - <a href="mailto:christoph@lajendaecker.de">christoph@lajendaecker.de</a></span></p>
-      <p><span><a href="img/_j_k.png" rel="prettyPhoto[gallery]"><img src="img/j_k.png" width="300px"></a></span><span class="person">Jan Kus - Entwickler - <a href="mailto:jan.kus@mac.com">jan.kus@mac.com</a></span></p>
+      <p><span><a href="img/_c_l.png" rel="prettyPhoto[gallery]"><img src="img/c_l.png" width="300px"></a></span><span class="person">Christoph Lajendäcker - Architekt - <a href="mailto:christoph@cubesare.com">christoph@cubesare.com</a></span></p>
+      <p><span><a href="img/_j_k.png" rel="prettyPhoto[gallery]"><img src="img/j_k.png" width="300px"></a></span><span class="person">Jan Kus - Entwickler - <a href="mailto:jan@cubesare.com">jan@cubesare.com</a></span></p>
     </div>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
