--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
     <div class="main-container top" id="start">
       <h1>Cubes are...</h1>
-      <h2>Ein modulares Schranksystem für Kleidung und andere Dinge.</h2>
+      <h2>Ein modulares Schranksystem für Kleidung und andere Dinge.
+</h2>
     </div>
 
     <div class="navbar navbar-fixed-top hidden-phone hidden-tablet">
@@ -93,7 +94,9 @@
 
     <div class="section main-container">
       <p><span><a href="img/introduction.jpg" rel="prettyPhoto[gallery]"><img src="img/introduction.jpg" width="738"></a></span></p>
-      <p>Der Name ist Programm: Was zunächst als einfacher Würfel erscheint, eröffnet in der Kombination von Material, Farbe und Form vielfältige Gestaltungsmöglichkeiten. Grundmodul (60 x 60 x 60 cm) und Doppelmodul (60 x 60 x 120 cm) können als individuelle Komposition von Elementen oder als zusammenhängende, geordnete Einheit auftreten. Da die Module von allen Seiten gleich gearbeitet sind, also keine Fugen und keine Rückseite haben, ist auch die Verwendung als Raumteiler möglich. Dem Prinzip der Schlichtheit folgend, verzichtet die Gestaltung Front auf störende Griffe. Das Öffnen von Türen und Schubladen erfolgt über das Antippen (Tip-On System) der Blende.</p>
+      <p><strong>Cubes are simple</strong> - Einfachheit und Reduktion auf das Wesentliche, diesen Grundsätzen folgt die Formgebung des Schranksystems Cubes are. Als Element hierfür steht der Würfel, mit seinen vielfältigen Möglichkeiten der Strukturierung, Pate. Die einzelnen Module sind fugenlos und von allen Seiten gleich gearbeitet. Schlicht ist die Frontblende in den Korpus eingelassen. Die Gestaltung der Front verzichtet auf störende Griffe. Türen und Schubladen werden über das Antippen der Blende geöffnet, die Innenseite und Aussenseite haben die gleiche Oberfläche: jeder einzelne Cube ist ein fertiges, eigenständiges Objekt.</p>
+      <p><strong>Cubes are for things</strong> - Viel Platz für Dinge. Das Grundmodul ist lieferbar mit zwei Fächern oder mit zwei Schubladen, wobei die zweite Schublade innen, hinter der Blende liegt. Hier können Kleidungsstücke aller Art, aber auch andere Gegenstände, die aus dem Sichtfeld verschwinden sollen, untergebracht werden. Das Doppelmodul ist mit einer eingelassenen Kleiderstange versehen und dient primär der hängenden Aufbewahrung von Kleidungsstücken.</p>
+      <p><strong>Cubes are for people</strong> - Das Besondere liegt in der Einfachheit. Als Gestaltungselemente im Wohnraum sind Cubes ein flexibles Mobiliar, das sich den individuellen Wohnsituationen und Anforderungen anpassen lässt. Der zunächst einfach erscheinende Würfel eröffnet vielfältige Gestaltungsmöglichkeiten, ob bis zur Decke gestapelt oder als Raumteiler dienend, die beweglichen Elemente können als zusammenhängende, geordnete Einheit bis hin zur individuell gestalteten Komposition auftreten.</p>
     </div>
     <div id="splitter" class="clearfix"></div>
 
@@ -158,6 +161,13 @@
     <div id="splitter" class="clearfix"></div>
     <div class="main-container" id="wantacube">
       <h2>Mein Cube?</h2>
+      <p>Die Cubes werden in der Grundvariante aus MDF gefertigt und mit einer hochwertigen PU-Lackierung im Farbton Cremeweiß RAL 9001 versehen. Zum Öffnung von Türen und Schubladen kommen Tip-On Systeme der Firma Blum zum Einsatz. Cubes in anderen Farbtöne können gerne nach Absprache produziert werden.</p>
+      <ul>
+        <li><strong>cube one / II F:</strong> Grundmodul mit Zwischenboden, fest eingebaut (B 60 x T 60 x H 60 cm, Innenmaße je Fach B 56 x T 56 x H 27 cm)</li>
+        <li><strong>cube one / II S:</strong> Grundmodul mit Doppelschublade (B 60 x T 60 x H 60 cm, Innenmaße je Schublade: B 51 x T 52 x H 22,5 cm)</li>
+        <li><strong>cube two / I F:</strong> Doppelmodul mit eingelassener Alu-Kleiderstange (60 x 60 x 120 cm, Innenmaße: B 56 x T 56 x H 116 cm)</li>
+      </ul>
+      <p>Individuelle Variationen und Elemente, wie Beispielsweise Dreifachmodule (60 x 60 x 180 cm), Einlegeböden oder -schubladen für das Doppelmodul, Grundmodule ohne Tür und Rückwand oder auch die Verwendung individueller Materialien, wie z.B. farbiges MDF oder beschichtete Multiplex-Platten, sind auf Anfrage möglich.</p>
       <p><a href="mailto:wantacube@cubesare.com">Bei Fragen schreiben Sie uns doch einfach eine E-Mail</a>, <a href="http://twitter.com/cubesare">folgen sie uns auf Twitter</a> oder <a href="http://facebook.com/cubesare">hinterlassen sie einen Eintrag auf unsere Facebook Pinnwand</a>.</p>
     </div>
     <div id="splitter" class="clearfix"></div>
